[Cast] Refresh cast button visibility when disableRemotePlayback attribute changes

BUG=655642

Review-Url: https://codereview.chromium.org/2420633002
Cr-Commit-Position: refs/heads/master@{#425532}

Former-commit-id: b9893ae730d1ffb08fad82862e93a371086d13a5